...
            android:text="Puoi aggiungerti alla coda cliccando il pulsante sottostante."
            android:textColor="#757575"
            android:textSize="14sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/buttonChecknextState"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewDescription2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_design_general"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickQueue"
            android:padding="10dp"
            android:text="Accedi alla Coda"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>
...
