...
    <string name="out_of_sight">Out Of Sight</string>
    <string name="gone">Gone</string>
    <string name="logo">Logo</string>
    <string name="toggle_email_visibility">Toggle Email Visibility</string>
    <string name="accedi_come_ospite">Accedi come Ospite</string>
    <string name="non_hai_un_account_registrati">Non hai un account? Registrati!</string>
    <string name="accedi">Accedi</string>
</resources>


